--- a/example/web/index.html
+++ b/example/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="eartho_one_example">
+  <meta name="apple-mobile-web-app-title" content="oneexample">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>eartho_one_example</title>
+  <title>oneexample</title>
   <link rel="manifest" href="manifest.json">
 
   <script src="https://unpkg.com/@eartho/one-client-js@1.0.5/dist/lib/eartho-one.cjs.js"></script>
