adding flutter web

--- a/example/web/index.html
+++ b/example/web/index.html
@@ -32,7 +32,7 @@
   <title>oneexample</title>
   <link rel="manifest" href="manifest.json">
 
-  <script src="https://unpkg.com/@eartho/one-client-js@1.0.5/dist/lib/eartho-one.cjs.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@eartho/one-client-js@1.0.19/dist/eartho-one-js.production.js"></script>
 
 </head>
 <body>
